product details implemented correctly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,10 @@
 
             <!-- Include any necessary intent filters or other configurations -->
         </activity>
+        <activity android:name=".ProductDetailsActivity">
 
+            <!-- Include any necessary intent filters or other configurations -->
+        </activity>
     </application>
 
 </manifest>
