everythings is added correctly , every functionnality is working , missing only the add product layout, add product logic ,

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
 
             <!-- Include any necessary intent filters or other configurations -->
         </activity>
+        <activity android:name=".AddToCartActivity">
+
+        </activity>
     </application>
 
 </manifest>
