--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
         <activity android:name=".AddToCartActivity">
 
         </activity>
+        <activity android:name=".AddProduct" />
+
     </application>
 
 </manifest>
